feature: Add amount to category
